Add one project more focus on GET

--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -425,7 +425,7 @@
                                 <!-- Esco vs Hensley 2009 -->
                                 <div class="col-md-4 mb-4">
                                     <div class="card shadow-sm h-100">
-                                        <img src="../assets/images/ESCvsHEN.png" alt="Cable shovel photo" class="card-img-top img-fluid">
+                                        <img src="../assets/images/escovshensley.png" alt="Comparison invoicing between ESCO and Hensley" class="card-img-top img-fluid">
                                         <div class="card-body">
                                             <h5>Competition: Esco vs Hensley (2009 - Peru)</h5>
                                             <p><strong>Issue:</strong> A competition was held to determine the supplier of GET systems for the entire fleet of Bucyrus 495BHI Cable Shovels. SH002 and SH004 were fitted with ESCO’s 85SV2 system, while SH001 and SH003 used Hensley’s XSC12 system.</p>
