--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header.ejs')%>
     <%- include('partials/main_nav.ejs')%>
-        <!-- Filename: projects.ejs | Author: Juan Arevalo | Date: 02-09-2024 -->
+        <!-- Filename: projects.ejs | Author: Juan Arevalo | Date: 03-09-2024 -->
         <div class="d-flex justify-content-center bg-light vh-100">
             <main class="container py-5">
 
@@ -314,15 +314,30 @@
                         </div>
                         <div class="row align-items-stretch">
                             <div class="row">
-                                
+
+                                <!-- Argentina -->
+                                <div class="col-md-4 mb-4">
+                                    <div class="card shadow-sm h-100">
+                                        <img src="../assets/images/conversionlip.png" alt="Conversion ESCO lip" class="card-img-top img-fluid">
+                                        <div class="card-body">
+                                            <h5>Conversion of Lip on PC7000 - Argentina</h5>
+                                            <p><strong>Challenge:</strong> Remove the existing Hensley lip and install the ESCO Nemisys lip in accordance with ESCO procedures.</p>
+                                            <p><strong>Strategy:</strong> Conducted welder training, installed alignment bars to ensure dimensional accuracy, removed the Hensley lip, cleaned the joint area, performed PT inspection on the bevels, assembled the ESCO lip, applied joint welding using the temper bead technique, polished the weldable areas, conducted a final PT inspection, and prepared a comprehensive report for the customer and the engineering team.</p>
+                                            <p><strong>Role:</strong> TSG</p>
+                                            <p><strong>Customer:</strong> Argentina (2022)</p>
+                                        </div>
+                                    </div>
+                                </div>
+
+
                                 <!-- Colombia -->
                                 <div class="col-md-4 mb-4">
                                     <div class="card shadow-sm h-100">
                                         <img src="../assets/images/drag_crack.png" alt="Dragline bucket" class="card-img-top img-fluid">
                                         <div class="card-body">
                                             <h5>Crack Repair on the Dragline Bucket under Warranty</h5>
-                                            <p><strong>Issue:</strong> An 11.5-inch-long crack was found on the left-hand side connection between the cheek plate and cheek plate extension. This crack originated from the original weld bead (made in the USA).</p>
-                                            <p><strong>Solution:</strong> The crack was removed just in time, and its removal was confirmed. The repair was completed using ESCO procedures and AWS D1.1 M:2010, Part F, Table 6.3. During its lifetime, no additional cracks appeared in the same area.</p>
+                                            <p><strong>Chellenge:</strong> An 11.5-inch-long crack was found on the left-hand side connection between the cheek plate and cheek plate extension. This crack originated from the original weld bead (made in the USA).</p>
+                                            <p><strong>Strategy:</strong> The crack was removed just in time, and its removal was confirmed. The repair was completed using ESCO procedures and AWS D1.1 M:2010, Part F, Table 6.3. During its lifetime, no additional cracks appeared in the same area.</p>
                                             <p><strong>Role:</strong> TSG</p>
                                             <p><strong>Customer:</strong> Drummond Mine - Colombia (2014)</p>
                                         </div>
@@ -336,8 +351,8 @@
                                         <img src="../assets/images/dragline.png" alt="Dragline bucket" class="card-img-top img-fluid">
                                         <div class="card-body">
                                             <h5>115CY Dragline Bucket Assembly</h5>
-                                            <p><strong>Issue:</strong> Provided support and supervision for the new bucket assembly according to ESCO procedures, with additional engineering support from Portland.</p>
-                                            <p><strong>Solution:</strong> Successfully assembled a 115CY Profill Bucket in 20 days, strictly following ESCO drawings and procedures, and completed the project on time.</p>
+                                            <p><strong>Challenge:</strong> Provided support and supervision for the new bucket assembly according to ESCO procedures, with additional engineering support from Portland.</p>
+                                            <p><strong>Strategy:</strong> Successfully assembled a 115CY Profill Bucket in 20 days, strictly following ESCO drawings and procedures, and completed the project on time.</p>
                                             <p><strong>Role:</strong> Lead Supervisor</p>
                                             <p><strong>Customer:</strong> Drummond Mine - Colombia (2014)</p>
                                         </div>
@@ -351,8 +366,8 @@
                                         <img src="../assets/images/bucket_panama.png" alt="Aquadigger bucket Dredge" class="card-img-top img-fluid">
                                         <div class="card-body">
                                             <h5>Rebuild for Manufacturer Warranty: 03 Aquadigger Buckets for Aleman Zubieta Dredge</h5>
-                                            <p><strong>Issue:</strong> Premature wear and damage to buckets used in the Culebra Cut Expansion Project.</p>
-                                            <p><strong>Solution:</strong> Repaired the buckets over 30 days, modifying the design for wear protection in situ based on wear analysis of the damaged buckets, with remote support from the ESCO Engineering Team in Portland.</p>
+                                            <p><strong>Challenge:</strong> Premature wear and damage to buckets used in the Culebra Cut Expansion Project.</p>
+                                            <p><strong>Strategy:</strong> Repaired the buckets over 30 days, modifying the design for wear protection in situ based on wear analysis of the damaged buckets, with remote support from the ESCO Engineering Team in Portland.</p>
                                             <p><strong>Role:</strong> Lead Supervisor</p>
                                             <p><strong>Customer:</strong> Autoridad del Canal de Panama (2013-2014)</p>
                                         </div>
@@ -365,8 +380,8 @@
                                         <img src="../assets/images/ant_cable.png" alt="Cable shovel photo" class="card-img-top img-fluid">
                                         <div class="card-body">
                                             <h5>Six Sigma Project to Decrease Downtime for Cable Shovels</h5>
-                                            <p><strong>Issue:</strong> An average of 30 hours of downtime per month across four Bucyrus 495 BI cable shovels, primarily due to tasks involving ground engaging tools (GET).</p>
-                                            <p><strong>Solution:</strong> Successfully reduced downtime to an average of 5 hours per month by optimizing GET tasks.</p>
+                                            <p><strong>Challenge:</strong> An average of 30 hours of downtime per month across four Bucyrus 495 BI cable shovels, primarily due to tasks involving ground engaging tools (GET).</p>
+                                            <p><strong>Strategy:</strong> Successfully reduced downtime to an average of 5 hours per month by optimizing GET tasks.</p>
                                             <p><strong>Role:</strong> Supervisor</p>
                                             <p><strong>Customer:</strong> Antamina Mine - Peru (2010)</p>
                                         </div>
@@ -384,8 +399,8 @@
                                         <img src="../assets/images/sv2points.png" alt="Cable shovel photo" class="card-img-top img-fluid">
                                         <div class="card-body">
                                             <h5>SV2 Point Breakages in Bucyrus 495BHI, P&H4100XPC, and CAT7495 Cable Shovels</h5>
-                                            <p><strong>Issue:</strong> Points were breaking due to extreme impact and operational conditions, including scratching over a length of 18.5 inches. These issues were reported and resolved in three different mines at different times—two cases in Peru and one in Chile—across various machines using the 85SV2 point.</p>
-                                            <p><strong>Solution:</strong> Implemented a change to a shorter design point, the SV2RX point, to reduce the leverage effect, or utilized a new design of U90RT-A points.</p>
+                                            <p><strong>Challenge:</strong> Points were breaking due to extreme impact and operational conditions, including scratching over a length of 18.5 inches. These issues were reported and resolved in three different mines at different times—two cases in Peru and one in Chile—across various machines using the 85SV2 point.</p>
+                                            <p><strong>Strategy:</strong> Implemented a change to a shorter design point, the SV2RX point, to reduce the leverage effect, or utilized a new design of U90RT-A points.</p>
                                             <p><strong>Role:</strong> Supervisor and TSG</p>
                                             <p><strong>Customer:</strong> Peru (2009 and 2019), Chile (2018)</p>
                                         </div>
@@ -399,8 +414,8 @@
                                         <img src="../assets/images/stabilizer.png" alt="Stabilizer modification photo" class="card-img-top img-fluid">
                                         <div class="card-body">
                                             <h5>Modification of WHP480KSTAB Stabilizer to Use WHP480N02-U90 Adapters in P&H2800 Cable Shovel at Cerrejón Mine</h5>
-                                            <p><strong>Issue:</strong> The customer needed to switch from competitors to ESCO products as quickly as possible. However, the time required for welding tasks on the lip during the overhaul period was a limiting factor.</p>
-                                            <p><strong>Solution:</strong> Successfully implemented the transition to ESCO's Whisler Plus GET system by modifying the stabilizers, avoiding the need for welding, and enabling a faster changeover.</p>
+                                            <p><strong>Challenge:</strong> The customer needed to switch from competitors to ESCO products as quickly as possible. However, the time required for welding tasks on the lip during the overhaul period was a limiting factor.</p>
+                                            <p><strong>Strategy:</strong> Successfully implemented the transition to ESCO's Whisler Plus GET system by modifying the stabilizers, avoiding the need for welding, and enabling a faster changeover.</p>
                                             <p><strong>Role:</strong> TSG</p>
                                             <p><strong>Customer:</strong> Cerrejón Mine, Colombia (2017)</p>
                                         </div>
@@ -414,8 +429,8 @@
                                         <img src="../assets/images/points_comparison.png" alt="Cable shovel photo" class="card-img-top img-fluid">
                                         <div class="card-body">
                                             <h5>Improvement of Bucyrus 495BHI Cable Shovel Production Using SV2VX Points</h5>
-                                            <p><strong>Issue:</strong> In poor blasting zones, the wear points lost penetration as they wore down, leading to a proportional decrease in efficiency, which negatively impacted the loading cycle time of CAT794 trucks.</p>
-                                            <p><strong>Solution:</strong> Reduced haul truck load time by 17 seconds for CAT793 trucks by implementing SV2VX points.</p>
+                                            <p><strong>Challenge:</strong> In poor blasting zones, the wear points lost penetration as they wore down, leading to a proportional decrease in efficiency, which negatively impacted the loading cycle time of CAT794 trucks.</p>
+                                            <p><strong>Strategy:</strong> Reduced haul truck load time by 17 seconds for CAT793 trucks by implementing SV2VX points.</p>
                                             <p><strong>Role:</strong> Supervisor</p>
                                             <p><strong>Customer:</strong> Peru (2011)</p>
                                         </div>
@@ -428,15 +443,13 @@
                                         <img src="../assets/images/escovshensley.png" alt="Comparison invoicing between ESCO and Hensley" class="card-img-top img-fluid">
                                         <div class="card-body">
                                             <h5>Competition: Esco vs Hensley (2009 - Peru)</h5>
-                                            <p><strong>Issue:</strong> A competition was held to determine the supplier of GET systems for the entire fleet of Bucyrus 495BHI Cable Shovels. SH002 and SH004 were fitted with ESCO’s 85SV2 system, while SH001 and SH003 used Hensley’s XSC12 system.</p>
-                                            <p><strong>Solution:</strong> Through our technical support, we successfully helped ESCO win the competition against Hensley. The decisive factor was the excessive cost to the customer, with Hensley invoicing USD 129,434 more than ESCO. Additionally, the downtime for GET changes was 122 hours for Hensley compared to 81 hours for ESCO during the competition period (Jan to Dec 2009).</p>
+                                            <p><strong>Challenge:</strong> A competition was held to determine the supplier of GET systems for the entire fleet of Bucyrus 495BHI Cable Shovels. SH002 and SH004 were fitted with ESCO’s 85SV2 system, while SH001 and SH003 used Hensley’s XSC12 system.</p>
+                                            <p><strong>Strategy:</strong> Through our technical support, we successfully helped ESCO win the competition against Hensley. The decisive factor was the excessive cost to the customer, with Hensley invoicing USD 129,434 more than ESCO. Additionally, the downtime for GET changes was 122 hours for Hensley compared to 81 hours for ESCO during the competition period (Jan to Dec 2009).</p>
                                             <p><strong>Role:</strong> Supervisor</p>
                                             <p><strong>Customer:</strong> Peru</p>
                                         </div>
                                     </div>
                                 </div>
-
-
 
                             </div>
                         </div>
