Fix titles projects

--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -335,7 +335,7 @@
                                         <img src="../assets/images/drag_crack.png" alt="Dragline bucket" class="card-img-top img-fluid">
                                         <div class="card-body">
                                             <h6><strong>Crack Repair on the Dragline Bucket under Warranty</strong></h6>
-                                            <p><strong>Chellenge:</strong> An 11.5-inch-long crack was found on the left-hand side connection between the cheek plate and cheek plate extension. This crack originated from the original weld bead (made in the USA).</p>
+                                            <p><strong>Challenge:</strong> An 11.5-inch-long crack was found on the left-hand side connection between the cheek plate and cheek plate extension. This crack originated from the original weld bead (made in the USA).</p>
                                             <p><strong>Strategy:</strong> The crack was removed just in time, and its removal was confirmed. The repair was completed using ESCO procedures and AWS D1.1 M:2010, Part F, Table 6.3. During its lifetime, no additional cracks appeared in the same area.</p>
                                             <p><strong>Role:</strong> TSG</p>
                                             <p><strong>Customer:</strong> Drummond Mine - Colombia (2014)</p>
