--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -328,6 +328,21 @@
                                         </div>
                                     </div>
                                 </div>
+                
+                                <!-- Panama -->
+                                <div class="col-md-4 mb-4">
+                                    <div class="card shadow-sm h-100">
+                                        <img src="../assets/images/rialto.png" alt="Fix Rialto Door Dredge" class="card-img-top img-fluid">
+                                        <div class="card-body">
+                                            <h6><strong>Manufacturer Warranty Repair: 01 Door 15YD³ for Rialto Dredge</strong></h6>
+                                            <p><strong>Challenge:</strong> The small door beam tunnel did not accommodate the standard latch bar, preventing proper insertion into the beam tunnel as part of the bucket mechanism.</p>
+                                            <p><strong>Strategy:</strong> Set up the work area in ACP, removed the upper tunnel plate, repaired the door’s upper recess plate, welded a new tunnel and upper recess plate, completed the door repair, and provided a detailed report to the engineering team and the customer.</p>
+                                            <p><strong>Role:</strong> Lead Supervisor</p>
+                                            <p><strong>Customer:</strong> Autoridad del Canal de Panama (2017)</p>
+                                        </div>
+                                    </div>
+                                </div>
+
 
                                 <!-- Colombia -->
                                 <div class="col-md-4 mb-4">
