Add new project in wear abrasions solutions

--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -358,6 +358,20 @@
                                     </div>
                                 </div>
 
+                                <!-- Panama -->
+                                <div class="col-md-4 mb-4">
+                                    <div class="card shadow-sm h-100">
+                                        <img src="../assets/images/pin.png" alt="Fix Rialto Door Dredge" class="card-img-top img-fluid">
+                                        <div class="card-body">
+                                            <h6><strong>Corrective Actions for Bores Misalignment on Dredge Bucket Under Warranty</strong></h6>
+                                            <p><strong>Challenge:</strong> The new bucket had bores misalignment, preventing proper pin insertion during the installation process.</p>
+                                            <p><strong>Strategy:</strong> After reviewing the bucket’s manufacturing process, the hypothesis focused on deformation caused during the rock shield welding, which occurred after the machining stage. The welding likely induced misalignment. We removed the rock shield plates, and the misalignment was corrected instantly, allowing the customer to install the pin successfully.</p>
+                                            <p><strong>Role:</strong> Lead Supervisor</p>
+                                            <p><strong>Customer:</strong> Autoridad del Canal de Panama (2017)</p>
+                                        </div>
+                                    </div>
+                                </div>
+
                            
                                 <!-- Colombia -->
                                 <div class="col-md-4 mb-4">
