--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -321,8 +321,8 @@
                                         <img src="../assets/images/conversionlip.png" alt="Conversion ESCO lip" class="card-img-top img-fluid">
                                         <div class="card-body">
                                             <h6><strong>Conversion Lip on PC7000 - Argentina</strong></h6>
-                                            <p><strong>Challenge:</strong> Replace the Hensley lip with an ESCO Nemisys lip following ESCO procedures</p>
-                                            <p><strong>Strategy:</strong> Trained welders, ensured dimensional accuracy with alignment bars, removed the Hensley lip, prepared the joint, welded using the temper bead technique, polished welds, completed PT inspections, and provided a detailed report to the customer and engineering team.</p>
+                                            <p><strong>Challenge:</strong> Replace the competitor lip with an ESCO Nemisys lip following ESCO procedures</p>
+                                            <p><strong>Strategy:</strong> Trained welders, ensured dimensional accuracy with alignment bars, removed the competitor lip, prepared the joint, welded using the temper bead technique, polished welds, completed PT inspections, and provided a detailed report to the customer and engineering team.</p>
                                             <p><strong>Role:</strong> TSG</p>
                                             <p><strong>Customer:</strong> Argentina (2021)</p>
                                         </div>
@@ -334,11 +334,11 @@
                                     <div class="card shadow-sm h-100">
                                         <img src="../assets/images/rialto.png" alt="Fix Rialto Door Dredge" class="card-img-top img-fluid">
                                         <div class="card-body">
-                                            <h6><strong>Manufacturer Warranty Repair: 01 Door 15YD³ for Rialto Dredge</strong></h6>
+                                            <h6><strong>Manufacturer Warranty Repair: 01 Door 15YD³ for a Dredge</strong></h6>
                                             <p><strong>Challenge:</strong> The small door beam tunnel did not accommodate the standard latch bar, preventing proper insertion into the beam tunnel as part of the bucket mechanism.</p>
                                             <p><strong>Strategy:</strong> Set up the work area in ACP, removed the upper tunnel plate, repaired the door’s upper recess plate, welded a new tunnel and upper recess plate, completed the door repair, and provided a detailed report to the engineering team and the customer.</p>
                                             <p><strong>Role:</strong> Lead Supervisor</p>
-                                            <p><strong>Customer:</strong> Autoridad del Canal de Panama (2017)</p>
+                                            <p><strong>Customer:</strong> Panama (2017)</p>
                                         </div>
                                     </div>
                                 </div>
@@ -353,7 +353,7 @@
                                             <p><strong>Challenge:</strong> An 11.5-inch-long crack was found on the left-hand side connection between the cheek plate and cheek plate extension. This crack originated from the original weld bead (made in the USA).</p>
                                             <p><strong>Strategy:</strong> The crack was removed just in time, and its removal was confirmed. The repair was completed using ESCO procedures and AWS D1.1 M:2010, Part F, Table 6.3. During its lifetime, no additional cracks appeared in the same area.</p>
                                             <p><strong>Role:</strong> TSG</p>
-                                            <p><strong>Customer:</strong> Drummond Mine - Colombia (2014)</p>
+                                            <p><strong>Customer:</strong> Colombia (2014)</p>
                                         </div>
                                     </div>
                                 </div>
@@ -367,7 +367,7 @@
                                             <p><strong>Challenge:</strong> The new bucket had bores misalignment, preventing proper pin insertion during the installation process.</p>
                                             <p><strong>Strategy:</strong> After reviewing the bucket’s manufacturing process, the hypothesis focused on deformation caused during the rock shield welding, which occurred after the machining stage. The welding likely induced misalignment. We removed the rock shield plates, and the misalignment was corrected instantly, allowing the customer to install the pin successfully.</p>
                                             <p><strong>Role:</strong> Lead Supervisor</p>
-                                            <p><strong>Customer:</strong> Autoridad del Canal de Panama (2017)</p>
+                                            <p><strong>Customer:</strong> Panama (2017)</p>
                                         </div>
                                     </div>
                                 </div>
@@ -382,7 +382,7 @@
                                             <p><strong>Challenge:</strong> Provided support and supervision for the new bucket assembly according to ESCO procedures, with additional engineering support from Portland.</p>
                                             <p><strong>Strategy:</strong> Successfully assembled a 115CY Profill Bucket in 20 days, strictly following ESCO drawings and procedures, and completed the project on time.</p>
                                             <p><strong>Role:</strong> Lead Supervisor</p>
-                                            <p><strong>Customer:</strong> Drummond Mine - Colombia (2014)</p>
+                                            <p><strong>Customer:</strong> Colombia (2014)</p>
                                         </div>
                                     </div>
                                 </div>
@@ -393,11 +393,11 @@
                                     <div class="card shadow-sm h-100">
                                         <img src="../assets/images/bucket_panama.png" alt="Aquadigger bucket Dredge" class="card-img-top img-fluid">
                                         <div class="card-body">
-                                            <h6><strong>Rebuild for Manufacturer Warranty: 03 Aquadigger Buckets for Aleman Zubieta Dredge</strong></h6>
+                                            <h6><strong>Rebuild for Manufacturer Warranty: 03 Aquadigger Buckets for a Dredge</strong></h6>
                                             <p><strong>Challenge:</strong> Premature wear and damage to buckets used in the Culebra Cut Expansion Project.</p>
                                             <p><strong>Strategy:</strong> Repaired the buckets over 30 days, modifying the design for wear protection in situ based on wear analysis of the damaged buckets, with remote support from the ESCO Engineering Team in Portland.</p>
                                             <p><strong>Role:</strong> Lead Supervisor</p>
-                                            <p><strong>Customer:</strong> Autoridad del Canal de Panama (2013-2014)</p>
+                                            <p><strong>Customer:</strong> Panama (2013-2014)</p>
                                         </div>
                                     </div>
                                 </div>
@@ -411,7 +411,7 @@
                                             <p><strong>Challenge:</strong> An average of 30 hours of downtime per month across four Bucyrus 495 BI cable shovels, primarily due to tasks involving ground engaging tools (GET).</p>
                                             <p><strong>Strategy:</strong> Successfully reduced downtime to an average of 5 hours per month by optimizing GET tasks.</p>
                                             <p><strong>Role:</strong> Supervisor</p>
-                                            <p><strong>Customer:</strong> Antamina Mine - Peru (2010)</p>
+                                            <p><strong>Customer:</strong> Peru (2010)</p>
                                         </div>
                                         <div class="card-footer bg-light text-center">
                                             <img src="../assets/images/Antamina_certificated.png" alt="Award Certificate" class="award-img"
@@ -445,7 +445,7 @@
                                             <p><strong>Challenge:</strong> The customer needed to switch from competitors to ESCO products as quickly as possible. However, the time required for welding tasks on the lip during the overhaul period was a limiting factor.</p>
                                             <p><strong>Strategy:</strong> Successfully implemented the transition to ESCO's Whisler Plus GET system by modifying the stabilizers, avoiding the need for welding, and enabling a faster changeover.</p>
                                             <p><strong>Role:</strong> TSG</p>
-                                            <p><strong>Customer:</strong> Cerrejón Mine, Colombia (2017)</p>
+                                            <p><strong>Customer:</strong> Colombia (2017)</p>
                                         </div>
                                     </div>
                                 </div>
@@ -470,11 +470,11 @@
                                     <div class="card shadow-sm h-100">
                                         <img src="../assets/images/escovshensley.png" alt="Comparison invoicing between ESCO and Hensley" class="card-img-top img-fluid">
                                         <div class="card-body">
-                                            <h6><strong>Competition: Esco vs Hensley (2009 - Peru)</strong></h6>
-                                            <p><strong>Challenge:</strong> A competition was held to determine the supplier of GET systems for the entire fleet of Bucyrus 495BHI Cable Shovels. SH002 and SH004 were fitted with ESCO’s 85SV2 system, while SH001 and SH003 used Hensley’s XSC12 system.</p>
-                                            <p><strong>Strategy:</strong> Through our technical support, we successfully helped ESCO win the competition against Hensley. The decisive factor was the excessive cost to the customer, with Hensley invoicing USD 129,434 more than ESCO. Additionally, the downtime for GET changes was 122 hours for Hensley compared to 81 hours for ESCO during the competition period (Jan to Dec 2009).</p>
+                                            <h6><strong>Competition: Esco vs competitor</strong></h6>
+                                            <p><strong>Challenge:</strong> A competition was held to determine the supplier of GET systems for the entire fleet of Bucyrus 495BHI Cable Shovels. SH002 and SH004 were fitted with ESCO’s 85SV2 system, while SH001 and SH003 used competitor system.</p>
+                                            <p><strong>Strategy:</strong> Through our technical support, we successfully helped ESCO win the competition against competitor. The decisive factor was the excessive cost to the customer, with Hensley invoicing USD 129,434 more than ESCO. Additionally, the downtime for GET changes was 122 hours for competitor compared to 81 hours for ESCO during the competition period (Jan to Dec 2009).</p>
                                             <p><strong>Role:</strong> Supervisor</p>
-                                            <p><strong>Customer:</strong> Peru</p>
+                                            <p><strong>Customer:</strong> Peru (2009)</p>
                                         </div>
                                     </div>
                                 </div>
