--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -336,7 +336,7 @@
                                         <div class="card-body">
                                             <h6><strong>Manufacturer Warranty Repair: 01 Door 15YD³ for a Dredge</strong></h6>
                                             <p><strong>Challenge:</strong> The small door beam tunnel did not accommodate the standard latch bar, preventing proper insertion into the beam tunnel as part of the bucket mechanism.</p>
-                                            <p><strong>Strategy:</strong> Set up the work area in ACP, removed the upper tunnel plate, repaired the door’s upper recess plate, welded a new tunnel and upper recess plate, completed the door repair, and provided a detailed report to the engineering team and the customer.</p>
+                                            <p><strong>Strategy:</strong> Set up the work area, removed the upper tunnel plate, repaired the door’s upper recess plate, welded a new tunnel and upper recess plate, completed the door repair, and provided a detailed report to the engineering team and the customer.</p>
                                             <p><strong>Role:</strong> Lead Supervisor</p>
                                             <p><strong>Customer:</strong> Panama (2017)</p>
                                         </div>
