--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -472,7 +472,7 @@
                                         <div class="card-body">
                                             <h6><strong>Competition: Esco vs competitor</strong></h6>
                                             <p><strong>Challenge:</strong> A competition was held to determine the supplier of GET systems for the entire fleet of Bucyrus 495BHI Cable Shovels. SH002 and SH004 were fitted with ESCO’s 85SV2 system, while SH001 and SH003 used competitor system.</p>
-                                            <p><strong>Strategy:</strong> Through our technical support, we successfully helped ESCO win the competition against competitor. The decisive factor was the excessive cost to the customer, with Hensley invoicing USD 129,434 more than ESCO. Additionally, the downtime for GET changes was 122 hours for competitor compared to 81 hours for ESCO during the competition period (Jan to Dec 2009).</p>
+                                            <p><strong>Strategy:</strong> Through our technical support, we successfully helped ESCO win the competition against competitor. The decisive factor was the excessive cost to the customer, with competitor invoicing USD 129,434 more than ESCO. Additionally, the downtime for GET changes was 122 hours for competitor compared to 81 hours for ESCO during the competition period (Jan to Dec 2009).</p>
                                             <p><strong>Role:</strong> Supervisor</p>
                                             <p><strong>Customer:</strong> Peru (2009)</p>
                                         </div>
