Modify projects to avoid issues

--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header.ejs')%>
     <%- include('partials/main_nav.ejs')%>
-        <!-- Filename: projects.ejs | Author: Juan Arevalo | Date: 04-09-2024 -->
+        <!-- Filename: projects.ejs | Author: Juan Arevalo | Date: 05-09-2024 -->
         <div class="d-flex justify-content-center bg-light vh-100">
             <main class="container py-5">
 
@@ -230,68 +230,62 @@
                     </div>
 
                     <div id="flush-collapseOne2" class="accordion-collapse collapse" aria-labelledby="headingOne"
-                        data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body">
-                            "Due to the pandemic, I was compelled to create a tool to help our customers maintain
-                            distance
-                            between mechanics and operators. The app was developed to monitor the wear of
-                            ground-engaging tools
-                            during pre-operational inspections by operators. This application won the Digital
-                            Transformation Award at Cerro Verde Mine."
-                        </div>
-                        <div class="row align-items-stretch">
-                            <div class="row">
-                                <!-- Kiruwear App -->
-                                <div class="col-md-4 mb-4">
-                                    <div class="card shadow-sm h-100">
-                                        <img src="../assets/images/kiru.png" alt="Kiruwear App"
-                                            class="card-img-top img-fluid">
-                                        <div class="card-body">
-                                            <h6><strong>Kiruwear App (Mobile App)</strong></h6>
-                                            <p>Remote wear control app to prevent unplanned downtime for P&H4100XPC
-                                                cable shovels.
-                                                This was awarded the 2021 Digital Transformation at Cerro Verde
-                                                Mine.
-                                            </p>
-                                            <p><strong>Role:</strong> Creator, Manager, and System Analist</p>
-                                            <p><strong>Languages:</strong> Flutter, PHP Codeigniter</p>
-                                            <p><strong>Status:</strong> Complete - <a href="https://kiru-wear.com/"
-                                                    target="_blank">Website</a></p>
-                                        </div>
-                                    </div>
+                    data-bs-parent="#accordionFlushExample">
 
-                                </div>
-                                <!-- Kiruwear award-->
-                                <div class="col-md-4 mb-4">
-                                    <div class="card shadow-sm h-100">
-                                        <img src="../assets/images/tech_award.jpg" alt="Kiruwear App Award"
-                                            class="card-img-top img-fluid">
-                                        <div class="card-body">
-                                            <h6><strong>2020 Technology Award</strong></h6>
-                                            <p>For this innovation, I received a prestigious Global
-                                                Technology Award from the company I collaborated with.
-                                            </p>
-                                        </div>
+                    <div class="accordion-body">
+                        "Due to the pandemic, I was compelled to create a tool to help our customers maintain
+                        distance between mechanics and operators. The app was developed to monitor the wear of
+                        heavy equipment components during pre-operational inspections by operators. This application won a Digital Transformation Award in 2021."
+                    </div>
+                    <div class="row align-items-stretch">
+                        <div class="row">
+                            <!-- Kiruwear App -->
+                            <div class="col-md-4 mb-4">
+                                <div class="card shadow-sm h-90">
+                                    <div class="card-body">
+                                        <h6><strong>Remote Wear Monitoring App (Mobile App)</strong></h6>
+                                        <p>Remote wear control app to prevent unplanned downtime for heavy mining equipment.
+                                            This app was awarded a Digital Transformation Award in 2021.
+                                        </p>
+                                        <p><strong>Role:</strong> Creator, Manager, and System Analyst</p>
+                                        <p><strong>Languages:</strong> Flutter, PHP Codeigniter</p>
+                                        <p><strong>Status:</strong> Complete </p>
+
+                                        <p><strong>Objectives</strong></p>
+                                        <p>. Reduce social distancing during equipment inspections.</p>
+                                        <p>. Help customers be more efficient in monitoring equipment wear.</p>
+                                        <p>. Learn about equipment wear through an online platform.</p>
+
                                     </div>
                                 </div>
-                                <!-- Former company recognition-->
-                                <div class="col-md-4 mb-4">
-                                    <div class="card shadow-sm h-100">
-                                        <img src="../assets/images/recognition.png" alt="Recognition by former company"
-                                            class="card-img-top img-fluid">
-                                        <div class="card-body">
-                                            <p><strong>Objectives</strong> </p>
-                                            <p>. Reduce social distancing during the inspection of the GET</p>
-                                            <p>. Help the customer be more efficient in monitoring the wear of the GETs
-                                            </p>
-                                            <p>. Learn about the wear of the GETs online through the website
-                                                https://kiru-wear.com/</p>
-                                        </div>
+                            </div>
+                            <!-- Award -->
+                            <div class="col-md-4 mb-4">
+                                <div class="card shadow-sm h-100">
+                                    <img src="../assets/images/tech_award.jpg" alt="Technology Award"
+                                        class="card-img-top img-fluid">
+                                    <div class="card-body">
+
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Company Objectives -->
+                            <div class="col-md-4 mb-4">
+                                <div class="card shadow-sm h-90">
+                                    <img src="../assets/images/recognition.png" alt="Recognition"
+                                        class="card-img-top img-fluid">
+                                    <div class="card-body">
+                                        
+                                        <h6><strong>2020 Technology Award</strong></h6>
+                                        <p>For this innovation, I received a prestigious Technology Award from the company I worked with.
+                                        </p>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+                    </div>
+
                 </div>
 
                 <!-- Innovations in Mining: Wear Abrasion Solutions -->
