remove link unuseful projects

--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -190,9 +190,7 @@
                                             <p><strong>Languages:</strong> Angular, ExpressJS, NodeJS, MongoDB,
                                                 Angular
                                                 Material, Git</p>
-                                            <p><strong>Status:</strong> Complete - <a
-                                                    href="https://tournaments-frontend.onrender.com/"
-                                                    target="_blank">Website</a></p>
+                                            <p><strong>Status:</strong> Complete </p>
                                         </div>
                                     </div>
                                 </div>
