--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,7 @@
 
             <!-- Add this line where you want to display the last updated date -->
             <p id="lastUpdated">Today's date:  </p>
+
             <!-- Add this in your body wherever you want the animation to appear -->
             <div class="star-wars-container">
                 <div class="crawl">
@@ -43,11 +44,13 @@
                 </div>
                 <div class="col-md-4">
                     <div class="list-group mb-4 shadow-sm">
-                        <a href="/about" class="list-group-item list-group-item-action"><i class="fa-regular fa-address-card mr-2"></i> About me</a>
-                        <a href="projects" class="list-group-item list-group-item-action"><i class="fa-solid fa-list-check mr-2"></i> Projects</a>
-                        <!-- <a href="/services" class="list-group-item list-group-item-action"><i class="fa-solid fa-microchip mr-2"></i> Services</a> -->
-                        <a href="/contact" class="list-group-item list-group-item-action"><i class="fa-regular fa-address-book mr-2"></i> Contact me</a>
-                        <a href="/link" class="list-group-item list-group-item-action"><i class="fa-solid fa-link mr-2"></i> Important Links</a>
+                        <!-- Add animated link section -->
+                        <div class="animated-link-container">
+                            <a href="/about" class="animated-link">About me</a>
+                            <a href="/projects" class="animated-link">Projects</a>
+                            <a href="/contact" class="animated-link">Contact me</a>
+                            <a href="/link" class="animated-link">Important Links</a>
+                        </div>
                     </div>
                     <img src="../assets/images/logo1.png" class="img-fluid mx-auto d-block w-25" alt="Tech award photo">
                 </div>
