Improve bottom footer

--- a/views/partials/bottom_nav.ejs
+++ b/views/partials/bottom_nav.ejs
@@ -1,6 +1,36 @@
-<!-- Filename: bottom_nav.ejs | Author: Juan Arevalo | Date: 25-02-2024 -->
-<footer class="foot d-flex align-items-center vh100">
-    <nav class="navbar navbar-light fixed-bottom navbar-light bg-light text-start w-100">
-        <p class="navbar-text fs-6 fst-italic mb-5 ms-3">&copy; 2024 All rights reserved by Jbaruz</p>
+<!-- Filename: bottom_nav.ejs | Author: Juan Arevalo | Date: 09-09-2024 -->
+<footer class="foot d-flex align-items-center">
+    <nav class="navbar fixed-bottom bg-body-secondary text-secondary w-100">
+        <div class="container-fluid">
+            <div class="row w-100">
+                <!-- Left Section: Links -->
+                <div class="col-md-6 text-start">
+                    <ul class="list-unstyled">
+                        <li><a href="/contact" class="text-secondary text-decoration-none">Contact</a></li>
+                        <li><a href="/about" class="text-secondary text-decoration-none">About me</a></li>
+                        <li><a href="/projects" class="text-secondary text-decoration-none">Projects</a></li>
+                    </ul>
+                </div>
+                
+                <!-- Right Section: Social Media Icons & Language Change -->
+                <div class="col-md-6 text-end">
+                    <!-- Social Media Icons -->
+                    <a href="https://www.linkedin.com/in/jbaruz" class="me-2"><i class="fab fa-linkedin text-secondary"></i></a>
+                    <a href="https://github.com/jbaruz" class="me-2"><i class="fab fa-github text-secondary"></i></a>
+                    <a href="https://twitter.com/Jbaruz11" class="me-2"><i class="fab fa-twitter text-secondary"></i></a>
+                    <a href="https://www.instagram.com/jbaruz1" class="me-2"><i class="fab fa-instagram text-secondary"></i></a>
+
+
+                </div>
+            </div>
+
+            <!-- Copyright -->
+            <div class="row w-100 mt-3">
+                <div class="col-12 text-center">
+                    <p class="fs-6 fst-italic mb-0">&copy; 2024 All rights reserved by Jbaruz</p>
+                </div>
+            </div>
+        </div>
     </nav>
 </footer>
+
