--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,8 +1,8 @@
 <%-include('partials/header.ejs')%>
 <%-include('partials/main_nav.ejs')%>
 
-<!-- Filename: about.ejs | Author: Juan Arevalo | Date: 05-09-2024 -->
-<div class="d-flex justify-content-center bg-light vh-100">
+<!-- Filename: about.ejs | Author: Juan Arevalo | Date: 10-09-2024 -->
+<div class="d-flex justify-content-center bg-light">
     <main class="container py-5">
         <div class="jumbotron bg-gradient-light text-center">
             <h1 class="display-7">About Juan Arevalo</h1>
@@ -15,9 +15,9 @@
                     <div class="card-body">
                         <h5 class="card-text text-center">Juan Arevalo</h5>
                         <p class="text-center">
-                            🌐 <a href="https://jbaruz.dev">jbaruz.dev</a><br>
-                            📧 <a href="mailto:jbaruz@gmail.com">jbaruz@gmail.com</a><br>
-                            🔗 <a href="https://www.linkedin.com/in/jbaruz/">LinkedIn</a> - <a href="https://github.com/Jbaruz">GitHub</a><br>
+                            🌐 <a href="https://jbaruz.dev">jbaruz.dev</a>
+                            📧 <a href="mailto:jbaruz@gmail.com">jbaruz@gmail.com</a>
+                            🔗 <a href="https://www.linkedin.com/in/jbaruz/">LinkedIn</a> - <a href="https://github.com/Jbaruz">GitHub</a>
                             📞 (+1) 437-557-6885
                         </p>
                     </div>
@@ -46,16 +46,9 @@
                 </div>
             </div>
         </div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
+        <%-include ('partials/bottom_nav.ejs')%>
     </main>
 </div>
 
-<%-include ('partials/bottom_nav.ejs')%>
+
 <%-include ('partials/footer.ejs')%>
