--- a/views/link.ejs
+++ b/views/link.ejs
@@ -1,9 +1,9 @@
 <%-include('partials/header.ejs')%>
     <%-include('partials/main_nav.ejs')%>
 
-        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 31-08-2024 -->
-        <div class="d-flex justify-content-center bg-light vh-100">
-            <main class="container mt-5">
+        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 10-09-2024 -->
+        <div class="d-flex justify-content-center bg-light">
+            <main class="container py-5">
                 <h2 class="text-center mb-4">Important Links</h2>
 
                 <div class="container mt-5">
@@ -956,15 +956,8 @@
                         </div>
                     </div>
                 </div>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
+                <%- include ('partials/bottom_nav.ejs')%>
             </main>
         </div>
-        <%-include ('partials/bottom_nav.ejs')%>
+
         <%-include ('partials/footer.ejs')%>
