--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header.ejs')%>
     <%- include('partials/main_nav.ejs')%>
-        <!-- Filename: projects.ejs | Author: Juan Arevalo | Date: 05-09-2024 -->
-        <div class="d-flex justify-content-center bg-light vh-100">
+        <!-- Filename: projects.ejs | Author: Juan Arevalo | Date: 10-09-2024 -->
+        <div class="d-flex justify-content-center bg-light">
             <main class="container py-5">
 
                 <!-- Introduction section-->
@@ -457,9 +457,10 @@
                 </div>
 
                 <!---Footer-->
-                <br><br><br><br><br><br><br><br>
+                <%- include ('partials/bottom_nav.ejs')%>
             </main>
+
         </div>
 
-        <%- include ('partials/bottom_nav.ejs')%>
+        
             <%- include ('partials/footer.ejs')%>
