--- a/views/services.ejs
+++ b/views/services.ejs
@@ -1,7 +1,7 @@
 <%-include('partials/header.ejs')%>
 <%-include('partials/main_nav.ejs')%>
 <!-- Filename: services.ejs | Author: Juan Arevalo | Date: 22-08-2023 -->
-<div class="d-flex justify-content-center bg-light vh-100">
+<div class="d-flex justify-content-center bg-light">
 <main class="container py-4">
     <div class="jumbotron text-between">
         <h1 class="display-7">Welcome to the <%=title%> page</h1>
@@ -58,14 +58,7 @@
             </div>
         </section>
     </div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+
 </main>
 </div>
 <%-include ('partials/bottom_nav.ejs')%>
