--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,7 +1,7 @@
 <%-include('partials/header.ejs')%>
     <%-include('partials/main_nav.ejs')%>
-        <!-- Filename: contact.ejs | Author: Juan Arevalo | Date: 18-05-2024 -->
-        <div class="d-flex justify-content-center bg-light vh-100">
+        <!-- Filename: contact.ejs | Author: Juan Arevalo | Date: 10-09-2024 -->
+        <div class="d-flex justify-content-center bg-light">
             <main class="container py-4 float-sm-start">
                 <div class="jumbotron text-between">
                     <h1 class="display-7">Welcome to the <%=title%> page</h1>
@@ -94,13 +94,10 @@
                 </div>
 
             </div>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
+            <%-include ('partials/bottom_nav.ejs')%>
         </main>
+
     </div>
         
-        <%-include ('partials/bottom_nav.ejs')%>
+
         <%-include ('partials/footer.ejs')%>
