--- a/views/partials/bottom_nav.ejs
+++ b/views/partials/bottom_nav.ejs
@@ -1,6 +1,6 @@
-<!-- Filename: bottom_nav.ejs | Author: Juan Arevalo | Date: 09-09-2024 -->
-<footer class="foot d-flex align-items-center">
-    <nav class="navbar fixed-bottom bg-body-secondary text-secondary w-100">
+<!-- Filename: bottom_nav.ejs | Author: Juan Arevalo | Date: 10-09-2024 -->
+<footer class="foot d-flex align-items-center text-secondary w-100">
+    <nav class="navbar bg-light w-100">
         <div class="container-fluid">
             <div class="row w-100">
                 <!-- Left Section: Links -->
