--- a/views/about.ejs
+++ b/views/about.ejs
@@ -2,33 +2,41 @@
 <%-include('partials/main_nav.ejs')%>
 
 <!-- Filename: about.ejs | Author: Juan Arevalo | Date: 10-09-2024 -->
-<div class="d-flex justify-content-center bg-light">
-    <main class="container py-5">
+<div class="d-flex justify-content-center">
+    <main class="container py-5 bg-black">
         <div class="jumbotron bg-gradient-light text-center">
-            <h1 class="display-7">About Juan Arevalo</h1>
+            <h1 class="display-7 text-light">About Juan Arevalo</h1>
         </div>
 
         <div class="row mt-5">
             <div class="col-md-3">
-                <div class="card mb-4 shadow-sm">
+                <div class="card mb-4 shadow-sm bg-dark text-info">
                     <img src="../assets/images/juan1.jpeg" alt="Juan photo" class="card-img-top w-100">
                     <div class="card-body">
                         <h5 class="card-text text-center">Juan Arevalo</h5>
                         <p class="text-center">
-                            🌐 <a href="https://jbaruz.dev">jbaruz.dev</a>
-                            📧 <a href="mailto:jbaruz@gmail.com">jbaruz@gmail.com</a>
-                            🔗 <a href="https://www.linkedin.com/in/jbaruz/">LinkedIn</a> - <a href="https://github.com/Jbaruz">GitHub</a>
-                            📞 (+1) 437-557-6885
+                            <div class="text-center">
+                                🌐 <a href="https://jbaruz.dev">jbaruz.dev</a>
+                            </div>
+                            <div class="text-center">
+                                📧 <a href="mailto:jbaruz@gmail.com">jbaruz@gmail.com</a>
+                            </div>
+                            <div class="text-center">
+                                🔗 <a href="https://www.linkedin.com/in/jbaruz/">LinkedIn</a> - <a href="https://github.com/Jbaruz">GitHub</a>
+                            </div>
+                            <div class="text-center">
+                                📞 (+1) 437-557-6885
+                            </div>
                         </p>
                     </div>
                 </div>
             </div>
             <div class="col-md-8">
-                <div class="card shadow-sm">
-                    <div class="card-header">
+                <div class="card shadow-sm bg-primary">
+                    <div class="card-header text-light">
                         Who I am?
                     </div>
-                    <div class="card-body">
+                    <div class="card-body text-light">
                         <p class="roboto mb-3">
                             Emerging from a rich heritage of software development and metallurgical engineering, I am a passionate multilingual professional with a zeal for technology and its intersection with real-world problems. My expertise spans from wear abrasion problem analysis to the vibrant realms of Artificial Intelligence. This unique blend empowers me to craft solutions that are both innovative and grounded.
                         </p>
