--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,17 +1,17 @@
 <%-include('partials/header.ejs')%>
 
 <!-- Filename: index.ejs | Author: Juan Arevalo | Date: 10-09-2024 -->
-<div class="d-flex justify-content-center bg-light">
-    <main class="container py-5">
+<div class="d-flex justify-content-center">
+    <main class="container py-5 bg-black">
         <div class="jumbotron text-center bg-gradient-light">
-            <h1 class="display-4">Embarking on an AI Odyssey!</h1>
-            <h2 class="subtitle">Blending Traditional Engineering with Cutting-Edge AI Innovation</h2>
+            <h1 class="display-4 text-light">Embarking on an AI Odyssey!</h1>
+            <h2 class="subtitle text-secondary">Blending Traditional Engineering with Cutting-Edge AI Innovation</h2>
 
             <!-- Add this line where you want to display the last updated date -->
             <p id="lastUpdated">Today's date:  </p>
 
             <!-- Add this in your body wherever you want the animation to appear -->
-            <div class="star-wars-container">
+            <div class="star-wars-container text-info">
                 <div class="crawl">
                     <div class="title">
                         <p>I’m Juan Arevalo, a Technical Product Manager turned AI Enthusiast.</p>
@@ -25,18 +25,18 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
-                    <div class="card mb-4 shadow-sm">
-                        <div class="card-body">
+                    <div class="card mb-4 shadow-sm bg-primary">
+                        <div class="card-body text-light">
                             <h2 class="card-title">Hi, I'm Juan!</h2>
                             <h5 class="mt-4">Mission Statement</h5>
                             <blockquote class="blockquote">
                                 <p>"Challenging oneself in life is the best way to keep evolving; nothing is ever too late when you decide to be the owner of the results in your life."</p>
-                                <footer class="blockquote-footer">Jbaruz</footer>
-                                <p class="personal-reflection">This quote embodies my journey from traditional engineering to AI, emphasizing my belief in continuous growth.</p>
+                                <footer class="blockquote-footer bg-primary text-black">Jbaruz</footer>
                             </blockquote>
                             <blockquote class="blockquote">
                                 <p>“Learning to code is learning to create and innovate.”</p>
-                                <footer class="blockquote-footer">Enda Kenny, Taoiseach, <cite title="Source Title">Ireland</cite></footer>
+                                <footer class="blockquote-footer bg-primary text-black">Enda Kenny, Taoiseach, <cite title="Source Title">Ireland</cite></footer>
+                                <p class="personal-reflection">This quote embodies my journey from traditional engineering to AI, emphasizing my belief in continuous growth.</p>
                             </blockquote>
                             <p class="mt-3">Thank you for visiting!</p>
                         </div>
