--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -26,5 +26,5 @@
     <!-- Icon -->
     <link rel="icon" href="../assets/images/favicon.ico" type="image/x-icon">
 </head>
-<body>
+<body class="bg-black">
     
