--- a/views/partials/main_nav.ejs
+++ b/views/partials/main_nav.ejs
@@ -1,6 +1,6 @@
 <!-- Filename: main_nav.ejs | Author: Juan Arevalo | Date: 13-09-2023 -->
 
-<nav class="navbar navbar-expand-lg navbar-light vh100">
+<nav class="navbar navbar-expand-lg navbar-light vh100 bg-primary">
     <div class="container-fluid">
         <a class="navbar-brand" href="/"><img src="..\assets\images\logo1.png" class="img-thumbnail rounded-square ms-4" alt="Logo Juan"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -36,10 +36,10 @@
             </ul>
             <div class="mx-5 border-left border-light"></div>
                 <form class="d-flex" action="https://you.com/search" method="get">
-                    <input class="form-control me-1" type="text" name="q" placeholder="Search... on you.com"
+                    <input class="form-control me-1 bg-secondary" type="text" name="q" placeholder="Search... on you.com"
                     aria-label="Search">
                     <input type="hidden" name="sitesearch" value="you.com">
-                    <button class="btn btn-outline-secondary" type="submit">Search</button>
+                    <button class="btn btn-outline-dark" type="submit">Search</button>
                 </form>
             </div>
         </div>
