--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,60 +1,60 @@
 <%-include('partials/header.ejs')%>
     <%-include('partials/main_nav.ejs')%>
         <!-- Filename: contact.ejs | Author: Juan Arevalo | Date: 10-09-2024 -->
-        <div class="d-flex justify-content-center bg-light">
+        <div class="d-flex justify-content-center">
             <main class="container py-4 float-sm-start">
-                <div class="jumbotron text-between">
+                <div class="jumbotron text-center text-light">
                     <h1 class="display-7">Welcome to the <%=title%> page</h1>
                 </div>
-                <div class="d-flex flex-sm-row flex-column py-5">
+                <div class="d-flex flex-sm-row flex-column py-5 text-light">
                     <div class="p-2 flex-fill">
                         <div class="card-body text-center">
                             <img src="../assets/images/juan.png" alt="Juan" class="rounded-circle img-fluid" style="width: 150px;">
                             <h5 class="my-3">Juan Arevalo</h5>
-                            <p class="text-muted mb-1">AI Learner & Expert in Mining Equipment Wear Solutions</p>
-                            <a href="/" class="text-muted mb-3" style="display: block;" target="_blank">jbaruz.dev</a>
-                            <p class="text-muted mb-4">Etobicoke Area, Toronto, Ontario, CA</p>
+                            <p class=" text-secondary mb-1">AI Learner & Expert in Mining Equipment Wear Solutions</p>
+                            <a href="/" class="text-secondary mb-3" style="display: block;" target="_blank">jbaruz.dev</a>
+                            <p class="text-secondary mb-4">Etobicoke Area, Toronto, Ontario, CA</p>
                         </div>
                 </div>
                 <div class="p-2 flex-fill">
-                    <section style="background-color: white;">
+                    <section style="background-color: black;">
                         <div class="container">
                             <div class="row">
                                 <div class="col-lg-4">
                                     <div class="card-body p-0">
                                         <ul class="list-group list-group-flush rounded-3">
                                             <li
-                                            class="list-group-item d-flex justify-content-evenly align-items-center p-3">
-                                            <i class="fab fa-github fa-lg" style="color: #333333;"></i>
-                                            <p class="mb-0">Jbaruz</p>
+                                            class="list-group-item d-flex justify-content-evenly align-items-center p-3 bg-black">
+                                            <i class="fab fa-github fa-lg" style="color: #686060;"></i>
+                                            <p class="mb-0 text-secondary fw-bold">Jbaruz</p>
                                             </li>
                                             <li
-                                                class="list-group-item d-flex justify-content-evenly align-items-center p-3">
+                                                class="list-group-item d-flex justify-content-evenly align-items-center p-3 bg-black">
                                                 <i class="fab fa-twitter fa-lg" style="color: #55acee;"></i>
-                                                <p class="mb-0">@Jbaruz</p>
+                                                <p class="mb-0 text-secondary fw-bold">@Jbaruz11</p>
                                             </li>
                                             <li
-                                                class="list-group-item d-flex justify-content-evenly align-items-center p-3">
+                                                class="list-group-item d-flex justify-content-evenly align-items-center p-3 bg-black">
                                                 <i class="fab fa-instagram fa-lg" style="color: #ac2bac;"></i>
-                                                <p class="mb-0">jbaruz1</p>
+                                                <p class="mb-0 text-secondary fw-bold">jbaruz1</p>
                                             </li>
                                             <li
-                                                class="list-group-item d-flex justify-content-evenly align-items-center p-3">
+                                                class="list-group-item d-flex justify-content-evenly align-items-center p-3 bg-black">
                                                 <i class="fab fa-linkedin fa-lg" style="color: #3b5998;"></i>
-                                                <p class="mb-0">jbaruz</p>
+                                                <p class="mb-0 text-secondary fw-bold">jbaruz</p>
                                             </li>
                                         </ul>
                                     </div>
                                 </div>
                                 <div class="col-lg-8">
-                                    <div class="card mb-4">
-                                        <div class="card-body">
+                                    <div class="card mb-4 bg-primary">
+                                        <div class="card-body text-light">
                                             <div class="row">
                                                 <div class="col-sm-3">
                                                     <p class="mb-0">Full Name</p>
                                                 </div>
                                                 <div class="col-sm-9">
-                                                    <p class="text-muted mb-0">Juan Bibiano Arevalo Ruiz</p>
+                                                    <p class="mb-0 fw-bold">Juan Bibiano Arevalo Ruiz</p>
                                                 </div>
                                             </div>
                                             <hr>
@@ -63,7 +63,7 @@
                                                     <p class="mb-0">Email</p>
                                                 </div>
                                                 <div class="col-sm-9">
-                                                    <p class="text-muted mb-0">jbaruz@gmail.com</p>
+                                                    <p class="mb-0 fw-bold">jbaruz@gmail.com</p>
                                                 </div>
                                             </div>
                                             <hr>
@@ -72,7 +72,7 @@
                                                     <p class="mb-0">Mobile</p>
                                                 </div>
                                                 <div class="col-sm-9">
-                                                    <p class="text-muted mb-0">(01) 437-557-6885</p>
+                                                    <p class="mb-0 fw-bold">(01) 437-557-6885</p>
                                                 </div>
                                             </div>
                                             <hr>
@@ -81,7 +81,7 @@
                                                     <p class="mb-0">Address</p>
                                                 </div>
                                                 <div class="col-sm-9">
-                                                    <p class="text-muted mb-0">Etobicoke Area, Toronto, Ontario, CA</p>
+                                                    <p class="mb-0 fw-bold">Etobicoke Area, Toronto, Ontario, CA</p>
                                                 </div>
                                             </div>
                                         </div>
