--- a/views/link.ejs
+++ b/views/link.ejs
@@ -2,9 +2,9 @@
     <%-include('partials/main_nav.ejs')%>
 
         <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 10-09-2024 -->
-        <div class="d-flex justify-content-center bg-light">
-            <main class="container py-5">
-                <h2 class="text-center mb-4">Important Links</h2>
+        <div class="d-flex justify-content-center">
+            <main class="container py-5 bg-black">
+                <h2 class="text-center mb-4 text-light">Important Links</h2>
 
                 <div class="container mt-5">
 
