--- a/views/partials/bottom_nav.ejs
+++ b/views/partials/bottom_nav.ejs
@@ -1,24 +1,26 @@
 <!-- Filename: bottom_nav.ejs | Author: Juan Arevalo | Date: 10-09-2024 -->
 <footer class="foot d-flex align-items-center text-secondary w-100">
-    <nav class="navbar bg-light w-100">
+    <nav class="navbar bg-black w-100">
         <div class="container-fluid">
             <div class="row w-100">
                 <!-- Left Section: Links -->
                 <div class="col-md-6 text-start">
                     <ul class="list-unstyled">
-                        <li><a href="/contact" class="text-secondary text-decoration-none">Contact</a></li>
+                        <li><a href="/" class="text-secondary text-decoration-none">Home</a></li>
                         <li><a href="/about" class="text-secondary text-decoration-none">About me</a></li>
+                        <li><a href="/contact" class="text-secondary text-decoration-none">Contact</a></li>                        
                         <li><a href="/projects" class="text-secondary text-decoration-none">Projects</a></li>
+                        <li><a href="/link" class="text-secondary text-decoration-none">Links</a></li>
                     </ul>
                 </div>
                 
                 <!-- Right Section: Social Media Icons & Language Change -->
                 <div class="col-md-6 text-end">
                     <!-- Social Media Icons -->
-                    <a href="https://www.linkedin.com/in/jbaruz" class="me-2"><i class="fab fa-linkedin text-secondary"></i></a>
-                    <a href="https://github.com/jbaruz" class="me-2"><i class="fab fa-github text-secondary"></i></a>
-                    <a href="https://twitter.com/Jbaruz11" class="me-2"><i class="fab fa-twitter text-secondary"></i></a>
-                    <a href="https://www.instagram.com/jbaruz1" class="me-2"><i class="fab fa-instagram text-secondary"></i></a>
+                    <a href="https://www.linkedin.com/in/jbaruz" class="me-2" target="_blank"><i class="fab fa-linkedin text-secondary"></i></a>
+                    <a href="https://github.com/jbaruz" class="me-2" target="_blank"><i class="fab fa-github text-secondary"></i></a>
+                    <a href="https://twitter.com/Jbaruz11" class="me-2" target="_blank"><i class="fab fa-twitter text-secondary"></i></a>
+                    <a href="https://www.instagram.com/jbaruz1" class="me-2" target="_blank"><i class="fab fa-instagram text-secondary"></i></a>
 
 
                 </div>
