--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -1,11 +1,11 @@
 <%- include('partials/header.ejs')%>
     <%- include('partials/main_nav.ejs')%>
         <!-- Filename: projects.ejs | Author: Juan Arevalo | Date: 10-09-2024 -->
-        <div class="d-flex justify-content-center bg-light">
-            <main class="container py-5">
+        <div class="d-flex justify-content-center">
+            <main class="container py-5 bg-black">
 
                 <!-- Introduction section-->
-                <div class="jumbotron bg-gradient-light text-center">
+                <div class="jumbotron bg-gradient-light text-center text-light">
                     <h1 class="display-7">Juan Arevalo's Projects</h1>
                 </div>
 
