Fix date index.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
             <h2 class="subtitle text-secondary">Blending Traditional Engineering with Cutting-Edge AI Innovation</h2>
 
             <!-- Add this line where you want to display the last updated date -->
-            <p id="lastUpdated">Today's date:  </p>
+            <p id="lastUpdated" style="color: darkslategray;">Today's date:  </p>
 
             <!-- Add this in your body wherever you want the animation to appear -->
             <div class="star-wars-container text-info">
